    actually finished.
- Removed the macros __STL_CONFIG_H, _STL_ALGOBASE_H and _MOVE_H from tools.h. If your
  plugin insists in using "using namespace std;" you can still define
  DISABLE_TEMPLATES_COLLIDING_WITH_STL before including any VDR header files.
- Removed 'register' from libsi/util.c to avoid a warning with  ISO-C++17.
- The cFile class has been partially deprecated:
  + The handling of file handles was not thread-safe.
  + It was only actually used in svdrp.c.
  + cFile::Ready() now processes only its own file descriptor by calling FileReady()
    instead of AnyFileReady().
- The transponder value of channels is now cached, because cChannel::Transponder(void)
  is called very often (pointed out by Helmut Binder).
- Added code for the 'qad' audio track (thanks to Helmut Binder).
- The 'Edit path' dialog now also shows the total size of all recordings in that path
  (thanks to Christoph Haubrich).
- The macro DEPRECATED_VDR_CHARSET_OVERRIDE and the related code has been removed.
- The default for DEPRECATED_SETCURRENTCHANNEL has been set to 0, which means that
  the function SetCurrentChannel(const cChannel *Channel) is no longer available.
  You can add 'DEPRECATED_SETCURRENTCHANNEL=1' when compiling in order to restore this
  functionality. However, it is recommended to use SetCurrentChannel(int ChannelNumber)
  instead.
- The macro DEPRECATED_GETBITMAP and the related code has been removed.
- The default for DEPRECATED_SKIN_SETITEMEVENT has been set to 0, which means that
  the function cSkinDisplayMenu::SetItemEvent() without the TimerActive parameter is
  no longer available. You can add 'DEPRECATED_SKIN_SETITEMEVENT=1' when compiling in
  order to restore this functionality. However, it is recommended to use the function
  with the TimerActive parameter instead.

2021-05-23:

- cRecordingInfo::Errors() now returns -1 for old recordings; added a missing 'const'
  (suggested by Christoph Haubrich).