@@ -8,7 +8,7 @@
 .\" License as specified in the file COPYING that comes with the
 .\" vdr distribution.
 .\"
-.\" $Id: vdr.5 5.2 2021/05/19 11:22:20 kls Exp $
+.\" $Id: vdr.5 5.3 2021/05/25 20:09:29 kls Exp $
 .\"
 .TH vdr 5 "15 Apr 2018" "2.4" "Video Disk Recorder Files"
 .SH NAME
@@ -824,6 +824,8 @@ l l.
 The 'O' tag contains the number of errors that occurred during recording.
 If it is zero, the recording can be safely considered error free. The higher the value,
 the more damaged the recording is.
+If this is an edited recording, the number of errors is that of the original
+recording.
 .SS RESUME
 The file \fIresume\fR (if present in a recording directory) contains
 the position within the recording where the last replay session left off.
