@@ -9706,7 +9706,8 @@ Video Disk Recorder Revision History
   order to restore this functionality. However, it is recommended to use the function
   with the TimerActive parameter instead.
 
-2021-05-23:
+2021-05-25:
 
 - cRecordingInfo::Errors() now returns -1 for old recordings; added a missing 'const'
   (suggested by Christoph Haubrich).
+- The error counter of a recording is now copied as is when editing a recording.
